<resources>
    <string name="app_name">InHouseApp</string>
    <string name="email">Email</string>
    <string name="password_hint">Password. Letter and number only, 6-10 characters</string>
    <string name="login">Login</string>
    <string name="invalid_error">Invalid email or password</string>
    <string name="login_fail">Login failure. Please retry</string>
    <string name="load_more">Load More</string>
    <string name="token">Token</string>
    <string name="login_token">Login token:</string>
    <string name="example_email">example@example.com</string>
    <string name="example_first_name">John</string>
    <string name="example_last_name">Doe</string>
    <string name="name">Name: </string>
    <string name="last_page">Last page</string>
</resources>